[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/graphics/buttons/button_background.png" type="Texture" id=1]
[ext_resource path="res://src/code/ui/main_escape_menu.gd" type="Script" id=2]

[node name="escape_menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -196.0
margin_right = 171.0
margin_bottom = -106.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="replay" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -46.0
margin_right = 171.0
margin_bottom = 44.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = 104.0
margin_right = 171.0
margin_bottom = 194.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="Control"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Control/ParallaxBackground"]
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="Control/ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.686275 )
scale = Vector2( 9.6, 21.6 )
texture = ExtResource( 1 )
centered = false
[connection signal="button_up" from="Control/resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="Control/replay" to="." method="_on_replay_button_up"]
[connection signal="button_down" from="Control/quit" to="." method="_on_quit_button_down"]
